--- a/supabase-wrappers-macros/Cargo.toml
+++ b/supabase-wrappers-macros/Cargo.toml
@@ -2,6 +2,13 @@
 name = "supabase-wrappers-macros"
 version = "0.1.0"
 edition = "2021"
+authors = ["Supabase Inc. https://supabase.com/"]
+license = "Apache-2.0"
+description = "Postgres Foreign Data Wrapper development framework macros for supabase-wrappers"
+homepage = "https://github.com/supabase/wrappers"
+repository = "https://github.com/supabase/wrappers"
+categories = ["database"]
+keywords = ["database", "postgres", "postgresql", "extension"]
 
 [dependencies]
 syn = "1.0"
