--- a/supabase-wrappers/Cargo.toml
+++ b/supabase-wrappers/Cargo.toml
@@ -2,6 +2,13 @@
 name = "supabase-wrappers"
 version = "0.1.0"
 edition = "2021"
+authors = ["Supabase Inc. https://supabase.com/"]
+license = "Apache-2.0"
+description = "Postgres Foreign Data Wrapper development framework in Rust."
+homepage = "https://github.com/supabase/wrappers"
+repository = "https://github.com/supabase/wrappers"
+categories = ["database"]
+keywords = ["database", "postgres", "postgresql", "extension"]
 
 [features]
 default = ["pg14"]
