--- a/supabase-wrappers-macros/Cargo.toml
+++ b/supabase-wrappers-macros/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "supabase-wrappers-macros"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 authors = ["Supabase Inc. https://supabase.com/"]
 license = "Apache-2.0"
 description = "Postgres Foreign Data Wrapper development framework macros for supabase-wrappers"
-homepage = "https://github.com/supabase/wrappers"
-repository = "https://github.com/supabase/wrappers"
+homepage = "https://github.com/supabase/wrappers/tree/main/supabase-wrappers-macros"
+repository = "https://github.com/supabase/wrappers/tree/main/supabase-wrappers-macros"
 categories = ["database"]
 keywords = ["database", "postgres", "postgresql", "extension"]
 
