--- a/supabase-wrappers/Cargo.toml
+++ b/supabase-wrappers/Cargo.toml
@@ -1,18 +1,23 @@
 [package]
 name = "supabase-wrappers"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 authors = ["Supabase Inc. https://supabase.com/"]
 license = "Apache-2.0"
 description = "Postgres Foreign Data Wrapper development framework in Rust."
-homepage = "https://github.com/supabase/wrappers/supabase-wrappers"
-repository = "https://github.com/supabase/wrappers/supabase-wrappers"
+homepage = "https://github.com/supabase/wrappers/tree/main/supabase-wrappers"
+repository = "https://github.com/supabase/wrappers/tree/main/supabase-wrappers"
 categories = ["database"]
 keywords = ["database", "postgres", "postgresql", "extension"]
 
 [features]
 default = ["pg14"]
+pg10 = ["pgx/pg10", "pgx-tests/pg10" ]
+pg11 = ["pgx/pg11", "pgx-tests/pg11" ]
+pg12 = ["pgx/pg12", "pgx-tests/pg12" ]
+pg13 = ["pgx/pg13", "pgx-tests/pg13" ]
 pg14 = ["pgx/pg14", "pgx-tests/pg14" ]
+pg_test = []
 
 [dependencies]
 pgx = "=0.5.6"
@@ -21,3 +26,4 @@ supabase-wrappers-macros = { version = "0.1", path = "../supabase-wrappers-macro
 
 [dev-dependencies]
 pgx-tests = "=0.5.6"
+
