--- a/wrappers/Cargo.toml
+++ b/wrappers/Cargo.toml
@@ -21,6 +21,9 @@ clickhouse_fdw = ["clickhouse-rs", "chrono", "time"]
 stripe_fdw = ["reqwest", "reqwest-middleware", "reqwest-retry", "serde_json"]
 firebase_fdw = ["reqwest", "reqwest-middleware", "reqwest-retry", "serde_json", "yup-oauth2", "regex", "time"]
 
+# TODO: audit dependencies
+airtable_fdw = ["reqwest", "reqwest-middleware", "reqwest-retry", "serde_json", "serde"]
+
 [dependencies]
 pgx = "=0.5.6"
 cfg-if = "1.0"
@@ -47,6 +50,9 @@ reqwest-retry = { version = "0.1.5", optional = true }
 # for firebase_fdw
 yup-oauth2 = { version = "8.0.0", optional = true }
 regex = { version = "1", optional = true }
+
+# for airtable_fdw
+serde = { version = "1.0", optional = true }
 
 [dev-dependencies]
 pgx-tests = "=0.5.6"
