--- a/supabase-wrappers-macros/Cargo.toml
+++ b/supabase-wrappers-macros/Cargo.toml
@@ -11,7 +11,7 @@ categories = ["database"]
 keywords = ["database", "postgres", "postgresql", "extension"]
 
 [dependencies]
-syn = "1.0"
+syn = { version = "1.0", features = ["full"] }
 quote = "1.0"
 proc-macro2 = "1.0"
 
