--- a/wrappers/Cargo.toml
+++ b/wrappers/Cargo.toml
@@ -35,7 +35,7 @@ chrono = { version = "0.4", optional = true }
 gcp-bigquery-client = { version = "0.16.0", optional = true }
 time = { version = "0.3.15", features = ["parsing"], optional = true }
 
-# for stripe_fdw, firebase_fdw
+# for stripe_fdw, firebase_fdw and etc.
 reqwest = { version = "0.11.12", features = ["json"], optional = true }
 reqwest-middleware = { version = "0.1.6", optional = true }
 reqwest-retry = { version = "0.1.5", optional = true }
