--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Build docker images
-      run: docker-compose -f wrappers/.ci/docker-compose.yml build
+      run: docker-compose -f wrappers/.ci/docker-compose.yaml build
 
     - name: Run tests
-      run: docker-compose -f wrappers/.ci/docker-compose.yml run test
+      run: docker-compose -f wrappers/.ci/docker-compose.yaml run test
