--- a/wrappers/Cargo.toml
+++ b/wrappers/Cargo.toml
@@ -19,7 +19,7 @@ helloworld_fdw = []
 bigquery_fdw = ["gcp-bigquery-client", "time", "serde_json"]
 clickhouse_fdw = ["clickhouse-rs", "chrono", "time"]
 stripe_fdw = ["reqwest", "reqwest-middleware", "reqwest-retry", "serde_json"]
-firebase_fdw = ["reqwest", "reqwest-middleware", "reqwest-retry", "serde_json", "yup-oauth2"]
+firebase_fdw = ["reqwest", "reqwest-middleware", "reqwest-retry", "serde_json", "yup-oauth2", "regex", "time"]
 
 [dependencies]
 pgx = "=0.5.6"
@@ -31,7 +31,7 @@ supabase-wrappers = { path = "../supabase-wrappers" }
 clickhouse-rs = { git = "https://github.com/suharev7/clickhouse-rs", branch = "async-await", features = ["tls"], optional = true }
 chrono = { version = "0.4", optional = true }
 
-# for bigquery_fdw
+# for bigquery_fdw, firebase_fdw and etc.
 gcp-bigquery-client = { version = "0.16.0", optional = true }
 time = { version = "0.3.15", features = ["parsing"], optional = true }
 
@@ -43,6 +43,7 @@ serde_json = { version = "1.0.86", optional = true }
 
 # for firebase_fdw
 yup-oauth2 = { version = "8.0.0", optional = true }
+regex = { version = "1", optional = true }
 
 [dev-dependencies]
 pgx-tests = "=0.5.6"
