--- a/wrappers/dockerfiles/pg/Dockerfile
+++ b/wrappers/dockerfiles/pg/Dockerfile
@@ -36,7 +36,7 @@ USER root
 # Install the extension
 COPY . .
 WORKDIR /home/app/wrappers
-RUN cargo pgx install --features bigquery_fdw --features pg14
+RUN cargo pgx install --features clickhouse_fdw --features pg14
 
 RUN chown -R postgres:postgres /home/app
 
