--- a/wrappers/.ci/docker-compose.yaml
+++ b/wrappers/.ci/docker-compose.yaml
@@ -15,6 +15,8 @@ services:
         condition: service_healthy
       firebase:
         condition: service_healthy
+      bigquery:
+        condition: service_started
 
   clickhouse:
     image: clickhouse/clickhouse-server
@@ -49,3 +51,13 @@ services:
       interval: 10s
       timeout: 5s
       retries: 30
+
+  bigquery:
+    container_name: bigquery-local
+    image: ghcr.io/goccy/bigquery-emulator:latest
+    volumes:
+      - ${PWD}/dockerfiles/bigquery/data.yaml:/app/data.yaml
+    ports:
+      - "9111:9111" # REST
+      - "9060:9060" # gRPC
+    command: --project=test --dataset=dataset1 --data-from-yaml=/app/data.yaml --port=9111
