--- a/supabase-wrappers/Cargo.toml
+++ b/supabase-wrappers/Cargo.toml
@@ -22,6 +22,7 @@ pg_test = []
 [dependencies]
 pgx = { version = "=0.5.6" }
 tokio = { version = "1.21", features = ["rt"] }
+uuid = { version = "1.2.2" }
 supabase-wrappers-macros = { version = "0.1", path = "../supabase-wrappers-macros" }
 
 [dev-dependencies]
