--- a/wrappers/dockerfiles/pg/Dockerfile
+++ b/wrappers/dockerfiles/pg/Dockerfile
@@ -17,9 +17,11 @@ WORKDIR /home/app
 
 ENV HOME=/home/app
 ENV PATH=/home/app/.cargo/bin:$PATH
+ENV LD_LIBRARY_PATH=/usr/local/lib:$LD_LIBRARY_PATH
 RUN chown postgres:postgres /home/app
 USER postgres
 
+# Install Rust
 RUN \
   curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --no-modify-path --profile minimal --default-toolchain nightly && \
   rustup --version && \
@@ -32,6 +34,26 @@ RUN cargo install cargo-pgx
 RUN cargo pgx init --pg14 $(which pg_config)
 
 USER root
+
+# Install libsodium
+RUN \
+  curl https://download.libsodium.org/libsodium/releases/libsodium-1.0.18-stable.tar.gz --output libsodium.tar.gz && \
+  tar zxvf libsodium.tar.gz && \
+  cd libsodium-stable && \
+  ./configure && make && make install
+
+# Install pgsodium
+RUN \
+  git clone https://github.com/michelp/pgsodium.git && \
+  cd pgsodium && \
+  make && make install && \
+  cp getkey_scripts/pgsodium_getkey_urandom.sh /usr/share/postgresql/14/extension/pgsodium_getkey.sh
+
+# Install Vault
+RUN \
+  git clone https://github.com/supabase/vault.git && \
+  cd vault && \
+  make install
 
 # Install the extension
 COPY supabase-wrappers supabase-wrappers
