--- a/wrappers/.ci/docker-compose.yaml
+++ b/wrappers/.ci/docker-compose.yaml
@@ -4,8 +4,8 @@ services:
   test-wrappers:
     container_name: pg-wrappers
     build:
-        context: ../..
-        dockerfile: ./wrappers/dockerfiles/pg/Dockerfile
+      context: ../..
+      dockerfile: ./wrappers/dockerfiles/pg/Dockerfile
     # volumes:
     #     - ../results:/home/app/wrappers/results
     command:
@@ -16,13 +16,13 @@ services:
       firebase:
         condition: service_healthy
       bigquery:
-        condition: service_started
+        condition: service_healthy
 
   clickhouse:
     image: clickhouse/clickhouse-server
     container_name: clickhouse-wrapped
     volumes:
-        - ../dockerfiles/clickhouse/setup.sql:/docker-entrypoint-initdb.d/setup.sql
+      - ../dockerfiles/clickhouse/setup.sql:/docker-entrypoint-initdb.d/setup.sql
     environment:
       CLICKHOUSE_DB: supa
     ports:
@@ -39,9 +39,9 @@ services:
     container_name: firebase-wrapped
     command: firebase emulators:start --project supa --import=/baseline-data
     volumes:
-        - ../dockerfiles/firebase/baseline-data:/baseline-data
-        - ../dockerfiles/firebase/firebase.json:/home/node/firebase.json
-        - ../dockerfiles/firebase/storage.rules:/home/node/storage.rules
+      - ../dockerfiles/firebase/baseline-data:/baseline-data
+      - ../dockerfiles/firebase/firebase.json:/home/node/firebase.json
+      - ../dockerfiles/firebase/storage.rules:/home/node/storage.rules
     ports:
       - "4000:4000" # UI
       - "8080:8080" # Firestore
@@ -54,10 +54,17 @@ services:
 
   bigquery:
     container_name: bigquery-local
-    image: ghcr.io/goccy/bigquery-emulator:latest
+    build:
+      context: ../..
+      dockerfile: ./wrappers/dockerfiles/bigquery/Dockerfile
     volumes:
       - ${PWD}/dockerfiles/bigquery/data.yaml:/app/data.yaml
     ports:
       - "9111:9111" # REST
       - "9060:9060" # gRPC
     command: --project=test --dataset=dataset1 --data-from-yaml=/app/data.yaml --port=9111
+    healthcheck:
+      test: curl --fail http://0.0.0.0:9111/bigquery/v2/projects/test_project/datasets/test_dataset || exit 1
+      interval: 10s
+      timeout: 5s
+      retries: 3
