waiting to resolve -- dns error: failed to lookup address information: Temporary failure in name resolution)

--- a/wrappers/.ci/docker-compose.yaml
+++ b/wrappers/.ci/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
     # volumes:
     #     - ../results:/home/app/wrappers/results
     command:
-      - ./bin/installcheck
+      - sleep 10 && ./bin/installcheck
     depends_on:
       clickhouse:
         condition: service_healthy
