--- a/wrappers/.ci/docker-compose.yaml
+++ b/wrappers/.ci/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
     # volumes:
     #     - ../results:/home/app/wrappers/results
     command:
-      - sleep 10 && ./bin/installcheck
+      - ./bin/installcheck
     depends_on:
       clickhouse:
         condition: service_healthy
