add amd64 build to CI release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,6 +43,7 @@ jobs:
         features:
           - "bigquery_fdw,clickhouse_fdw,stripe_fdw,firebase_fdw"
         box:
+          - { runner: ubuntu-20.04, arch: amd64 }
           - { runner: arm-runner, arch: arm64 }
     runs-on: ${{ matrix.box.runner }}
     timeout-minutes: 45
