--- a/wrappers/Cargo.toml
+++ b/wrappers/Cargo.toml
@@ -18,7 +18,7 @@ pg_test = []
 helloworld_fdw = []
 bigquery_fdw = ["gcp-bigquery-client", "time", "serde_json", "serde", "wiremock", "futures", "yup-oauth2"]
 clickhouse_fdw = ["clickhouse-rs", "chrono", "time"]
-stripe_fdw = ["reqwest", "reqwest-middleware", "reqwest-retry", "serde_json"]
+stripe_fdw = ["reqwest", "reqwest-middleware", "reqwest-retry", "serde_json", "time"]
 firebase_fdw = ["reqwest", "reqwest-middleware", "reqwest-retry", "serde_json", "yup-oauth2", "regex", "time"]
 
 # TODO: audit dependencies
