--- a/wrappers/.ci/docker-compose.yaml
+++ b/wrappers/.ci/docker-compose.yaml
@@ -1,28 +1,9 @@
 version: '3'
 services:
 
-  test-wrappers:
-    container_name: pg-wrappers
-    build:
-      context: ../..
-      dockerfile: ./wrappers/dockerfiles/pg/Dockerfile
-    # volumes:
-    #     - ../results:/home/app/wrappers/results
-    command:
-      - ./bin/installcheck
-    depends_on:
-      clickhouse:
-        condition: service_healthy
-      stripe:
-        condition: service_healthy
-      firebase:
-        condition: service_healthy
-
   clickhouse:
     image: clickhouse/clickhouse-server
     container_name: clickhouse-wrapped
-    volumes:
-      - ../dockerfiles/clickhouse/setup.sql:/docker-entrypoint-initdb.d/setup.sql
     environment:
       CLICKHOUSE_DB: supa
     ports:
@@ -33,12 +14,10 @@ services:
       interval: 10s
       timeout: 5s
       retries: 20
-      
+
   stripe:
     image: stripe/stripe-mock:v0.144.0
     container_name: stripe-mock
-    volumes:
-      - ../dockerfiles/stripe/setup.sql:/docker-entrypoint-initdb.d/setup.sql
     ports:
       - "12111:12111"
     healthcheck:
@@ -62,3 +41,21 @@ services:
       interval: 10s
       timeout: 5s
       retries: 30
+
+
+  bigquery:
+    container_name: bigquery-local
+    build:
+      context: ../..
+      dockerfile: ./wrappers/dockerfiles/bigquery/Dockerfile
+    volumes:
+      - ../dockerfiles/bigquery/data.yaml:/app/data.yaml
+    ports:
+      - "9111:9111" # REST
+      - "9060:9060" # gRPC
+    command: --project=test --dataset=dataset1 --data-from-yaml=/app/data.yaml --port=9111
+    healthcheck:
+      test: curl --fail http://0.0.0.0:9111/bigquery/v2/projects/test_project/datasets/test_dataset || exit 1
+      interval: 10s
+      timeout: 5s
+      retries: 3
