--- a/supabase-wrappers-macros/Cargo.toml
+++ b/supabase-wrappers-macros/Cargo.toml
@@ -13,6 +13,7 @@ keywords = ["database", "postgres", "postgresql", "extension"]
 [dependencies]
 syn = { version = "1.0", features = ["full"] }
 quote = "1.0"
+proc-macro2 = "1.0"
 
 [lib]
 proc-macro = true
