--- a/.github/workflows/test_wrappers.yml
+++ b/.github/workflows/test_wrappers.yml
@@ -6,42 +6,14 @@ on:
 jobs:
   test:
     name: Run tests
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
 
     - name: Build docker images
-      run: |
-        docker-compose -f wrappers/.ci/docker-compose.yaml up -d
+      run: docker-compose -f wrappers/.ci/docker-compose.yaml build
 
-    - uses: actions-rs/toolchain@v1
-      with:
-        toolchain: stable
-
-    - run: |
-        sudo apt remove -y postgres*
-        sudo apt-get install -y wget gnupg
-        sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list'
-        wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
-        sudo apt-get update -y -qq --fix-missing
-        sudo apt-get install -y \
-          clang-10 \
-          llvm-10 \
-          clang \
-          gcc \
-          make \
-          build-essential \
-          libz-dev \
-          zlib1g-dev \
-          strace \
-          libssl-dev \
-          pkg-config \
-          postgresql-15 \
-          postgresql-server-dev-15
-        sudo chmod a+rwx `/usr/lib/postgresql/15/bin/pg_config --pkglibdir` `/usr/lib/postgresql/15/bin/pg_config --sharedir`/extension /var/run/postgresql/
-
-    - run: cargo install cargo-pgx --version 0.6.1
-    - run: cargo pgx init --pg15 /usr/lib/postgresql/15/bin/pg_config
-    - run: cd wrappers && cargo pgx test --features all_fdws,pg15
+    - name: Run tests
+      run: docker-compose -f wrappers/.ci/docker-compose.yaml run test-wrappers
