upgrade pgx 0.6 to pgrx 0.8.3

--- a/wrappers/Cargo.toml
+++ b/wrappers/Cargo.toml
@@ -7,12 +7,13 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [features]
-default = ["pg15"]
-pg11 = ["pgx/pg11", "pgx-tests/pg11", "supabase-wrappers/pg11" ]
-pg12 = ["pgx/pg12", "pgx-tests/pg12", "supabase-wrappers/pg12" ]
-pg13 = ["pgx/pg13", "pgx-tests/pg13", "supabase-wrappers/pg13" ]
-pg14 = ["pgx/pg14", "pgx-tests/pg14", "supabase-wrappers/pg14" ]
-pg15 = ["pgx/pg15", "pgx-tests/pg15", "supabase-wrappers/pg15" ]
+default = [ "cshim", "pg15" ]
+cshim = [ "pgrx/cshim" ]
+pg11 = ["pgrx/pg11", "pgrx-tests/pg11", "supabase-wrappers/pg11" ]
+pg12 = ["pgrx/pg12", "pgrx-tests/pg12", "supabase-wrappers/pg12" ]
+pg13 = ["pgrx/pg13", "pgrx-tests/pg13", "supabase-wrappers/pg13" ]
+pg14 = ["pgrx/pg14", "pgrx-tests/pg14", "supabase-wrappers/pg14" ]
+pg15 = ["pgrx/pg15", "pgrx-tests/pg15", "supabase-wrappers/pg15" ]
 pg_test = []
 
 helloworld_fdw = []
@@ -29,7 +30,7 @@ airtable_fdw = ["reqwest", "reqwest-middleware", "reqwest-retry", "serde_json", 
 all_fdws = ["airtable_fdw", "bigquery_fdw", "clickhouse_fdw", "stripe_fdw", "firebase_fdw", "s3_fdw"]
 
 [dependencies]
-pgx = { version = "=0.6.1", features = ["time-crate"] }
+pgrx = { version = "=0.8.3", features = ["time-crate"] }
 cfg-if = "1.0"
 #supabase-wrappers = "0.1"
 supabase-wrappers = { path = "../supabase-wrappers", default-features = false }
@@ -69,7 +70,7 @@ async-compression = { version = "0.3.15", features = ["tokio", "bzip2", "gzip", 
 http = { version = "0.2", optional = true }
 
 [dev-dependencies]
-pgx-tests = "=0.6.1"
+pgrx-tests = "=0.8.3"
 
 [profile.dev]
 panic = "unwind"
