--- a/wrappers/Cargo.toml
+++ b/wrappers/Cargo.toml
@@ -26,12 +26,13 @@ s3_fdw = [
     "tokio", "tokio-util", "csv", "async-compression", "serde_json",
     "http", "parquet", "futures", "arrow-array", "chrono"
 ]
+logflare_fdw = ["reqwest", "reqwest-middleware", "reqwest-retry", "serde_json"]
 
 # TODO: audit dependencies
 airtable_fdw = ["reqwest", "reqwest-middleware", "reqwest-retry", "serde_json", "serde", "url"]
 
 # Does not include helloworld_fdw because of its general uselessness
-all_fdws = ["airtable_fdw", "bigquery_fdw", "clickhouse_fdw", "stripe_fdw", "firebase_fdw", "s3_fdw"]
+all_fdws = ["airtable_fdw", "bigquery_fdw", "clickhouse_fdw", "stripe_fdw", "firebase_fdw", "s3_fdw", "logflare_fdw"]
 
 [dependencies]
 pgrx = { version = "=0.9.6" }
@@ -51,7 +52,7 @@ serde_json = { version = "1.0.86", optional = true }
 wiremock = { version = "0.5", optional = true }
 futures = { version = "0.3", optional = true }
 
-# for stripe_fdw, firebase_fdw and etc.
+# for stripe_fdw, firebase_fdw, logflare_fdw and etc.
 reqwest = { version = "0.11.12", features = ["json"], optional = true }
 reqwest-middleware = { version = "0.1.6", optional = true }
 reqwest-retry = { version = "0.1.5", optional = true }
