set workspace resolver version to 2

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,4 @@
 [workspace]
-members = [
-    "supabase-wrappers",
-]
-exclude = [
-    "wrappers",
-]
+members = ["supabase-wrappers"]
+exclude = ["wrappers"]
+resolver = "2"
