refactor: separate options module

--- a/supabase-wrappers/Cargo.toml
+++ b/supabase-wrappers/Cargo.toml
@@ -25,6 +25,7 @@ pgrx = {version = "=0.9.8", default-features = false }
 tokio = { version = "1.24", features = ["rt"] }
 uuid = { version = "1.2.2" }
 supabase-wrappers-macros = { version = "0.1", path = "../supabase-wrappers-macros" }
+thiserror = "1.0.48"
 
 [dev-dependencies]
 pgrx-tests = "=0.9.8"
