--- a/wrappers/Cargo.toml
+++ b/wrappers/Cargo.toml
@@ -27,7 +27,7 @@ s3_fdw = [
     "http", "parquet", "futures", "arrow-array", "chrono", "thiserror"
 ]
 airtable_fdw = ["reqwest", "reqwest-middleware", "reqwest-retry", "serde_json", "serde", "url", "thiserror"]
-logflare_fdw = ["reqwest", "reqwest-middleware", "reqwest-retry", "serde_json", "thiserror"]
+logflare_fdw = ["reqwest", "reqwest-middleware", "reqwest-retry", "serde_json", "thiserror", "url"]
 
 # Does not include helloworld_fdw because of its general uselessness
 all_fdws = ["airtable_fdw", "bigquery_fdw", "clickhouse_fdw", "stripe_fdw", "firebase_fdw", "s3_fdw", "logflare_fdw"]
