--- a/wrappers/.ci/docker-compose.yaml
+++ b/wrappers/.ci/docker-compose.yaml
@@ -86,3 +86,14 @@ services:
       timeout: 5s
       retries: 3
       
+  qdrant:
+    image: qdrant/qdrant
+    container_name: qdrant
+    ports:
+      - "6333:6333" # http
+      - "6334:6334" # grpc
+    healthcheck:
+      test: curl --fail http://127.0.0.1:6333/readyz || exit 1
+      interval: 10s
+      timeout: 5s
+      retries: 3
