--- a/wrappers/.ci/docker-compose.yaml
+++ b/wrappers/.ci/docker-compose.yaml
@@ -85,4 +85,22 @@ services:
       interval: 10s
       timeout: 5s
       retries: 3
+
+  cnosdb:
+    image: cnosdb/cnosdb:community-latest
+    container_name: cnosdb
+    ports:
+      - "8901:8901"
+      - "8902:8902"
+      - "8904:8904"
+    command:
+      - /bin/bash
+      - -c
+      - |
+        cnosdb run --config /etc/cnosdb/cnosdb.conf -M singleton
+    healthcheck:
+      test: curl http://127.0.0.1:8902/api/v1/ping || exit 1
+      interval: 10s
+      timeout: 5s
+      retries: 3
       
