fix: remove stray comments

--- a/wrappers/dockerfiles/auth0/Dockerfile
+++ b/wrappers/dockerfiles/auth0/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.10-slim
 WORKDIR /usr/src/app
 
 RUN apt-get update \
-    && apt-get install -y --no-install-recommends curl \
+    && apt-get install -y --no-install-recommends curl
 
 COPY ./server.py .
 
